rjstyle.css
/*Individual Characteristics*/
html
{
  background-color: black; 
}

body 
{ 
  margin-left: 200px; 
  margin-right: 200px; 
  padding: 0;
  background-color: #00ccff; 
  height: 100%;
}

img.left
{
  border-style: solid;
  border-width: 1px;
  display: block;
  width: 50%;
  height: 50%;
  float: left;
}

hr
{
  border: 0 none;
  height: 1px;
  width: 56%;
  background-color: #000000;
}

p.boldened_para
{
  font-size: 400%;
  font-weight: 300;
}

p.small_text_colored
{
  font-size: 150%;
  background-size: 25% 50px;
  line-height: 50px;
}

a.s_t_c
{
  width: 25%;
  height: 50px;
}

/*Shared Characteristics*/

p.small_text_colored, p.boldened_para
{
  color: #000000;
  font-family: Oswald;
  background-color: #99ddff;
  border-style: solid;
  border-width: 1px;
}

p.small_text_colored, p.boldened_para, a.s_t_c, a.b_p
{
  text-decoration: none !important;
  margin: 0 auto;
  text-align: center;
}

p.boldened_para, a.b_p
{
  width: 75%;
  height: 75%;
}

a.b_p, a.s_t_c
{
  display: block;
}

